force-app/main/default/objects/Expense__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description
  >Monto del gasto en la moneda de la org. Debe ser mayor a cero.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>