force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
  >Categoría del gasto de renovación/mantenimiento. Valores: Materials, Labor, Permits, Furniture, Other. Se usa para agrupar y analizar gastos por tipo en reportes y en el componente LWC de gastos por categoría.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Permits</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>