force-app/main/default/objects/Expense__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <description
  >Fecha en que se realizó el gasto. Se usa junto con Amount__c para reportes de gastos por período y para el componente LWC de gastos por categoría.</description>
    <label>Expense Date</label>
    <type>Date</type>
</CustomField>