force-app/main/default/objects/Expense__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description
  >Propiedad a la que pertenece este gasto. Relación Master-Detail: si se elimina la propiedad, se eliminan también sus gastos asociados. Se usa para calcular el roll-up de gastos totales por propiedad.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>